# devshare

./: .gitignore  README.md  pyproject.toml
devserve/: cli.py  handlers.py  server.py  ui.py  utils.py
devshare/: __init__.py  auth.py  cli.py  handlers.py  server.py  ui.py  utils.py
