[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devshare"
version = "0.1.0"
description = "Cross-platform local file server and browser UI"
requires-python = ">=3.10"
dependencies = [
	"qrcode>=7.3",
]

[project.scripts]
devshare = "devshare.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devshare*"]